servo, stepper and led control

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,9 +16,9 @@ monitor_speed = 115200
 lib_deps =   
     stepper
     adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
-    adafruit/Adafruit VS1053 Library @ ^1.2.1
+    ;adafruit/Adafruit VS1053 Library @ ^1.2.1
     ;FreeStack
     ;vs1053_SdFat 
     ;https://github.com/madsci1016/Sparkfun-MP3-Player-Shield-Arduino-Library
-    ;https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat
+    ;git clone https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat
     ;SdFat
