--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,31 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:megaatmega2560]
 platform = atmelavr
-board = uno
+board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
 lib_deps =   
     stepper
     adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
+    SdFat
+    vs1053_SdFat 
+    FreeStack
+
+
+; [env:uno]
+; platform = atmelavr
+; board = uno
+; framework = arduino
+; monitor_speed = 115200
+; lib_deps =   
+;     stepper
+;     adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
     ;adafruit/Adafruit VS1053 Library @ ^1.2.1
     ;FreeStack
     ;vs1053_SdFat 
     ;https://github.com/madsci1016/Sparkfun-MP3-Player-Shield-Arduino-Library
     ;git clone https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat
     ;SdFat
+
