--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
-platform = atmelavr
-board = megaatmega2560
-framework = arduino
-monitor_speed = 115200
-lib_deps =   
-    stepper
-    adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
-    SdFat
-    vs1053_SdFat 
-    FreeStack
+; [env:megaatmega2560]
+; platform = atmelavr
+; board = megaatmega2560
+; framework = arduino
+; monitor_speed = 115200
+; lib_deps =   
+;     stepper
+;     adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
+;     SdFat
+;     vs1053_SdFat 
+;     FreeStack
 
 
 ; [env:uno]
@@ -36,3 +36,14 @@ lib_deps =
     ;git clone https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat
     ;SdFat
 
+[env:megaatmega1280]
+platform = atmelavr
+board = megaatmega1280
+framework = arduino
+monitor_speed = 115200
+lib_deps =   
+    stepper
+    adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
+    SdFat
+    vs1053_SdFat 
+    FreeStack
