--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,11 @@ board = uno
 framework = arduino
 monitor_speed = 115200
 lib_deps =   
-    stepper
-    adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
-    adafruit/Adafruit VS1053 Library @ ^1.2.1
-    ;FreeStack
+    ;SdFat
     ;vs1053_SdFat 
+    ;adafruit/Adafruit VS1053 Library @ ^1.2.1
+    ;FreeStack
+    
     ;https://github.com/madsci1016/Sparkfun-MP3-Player-Shield-Arduino-Library
     ;https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat
-    ;SdFat
+ 
