pio libs failed

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,11 @@ board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
 lib_deps =   
-    stepper
-    adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
-    SdFat
-    vs1053_SdFat 
-    FreeStack
+    ;stepper
+    ;adafruit/Adafruit PWM Servo Driver Library @ ^2.4.0
+    ;SdFat
+    ;vs1053_SdFat 
+    ;FreeStack
 
 
 ; [env:uno]
