bugs de timings

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,9 +36,9 @@ lib_deps =
     ;git clone https://github.com/mpflaga/Arduino_Library-vs1053_for_SdFat
     ;SdFat
 
-; [env:megaatmega1280]
+; [env:ATmega1280] ;ante era megaatmega1280, lo mismo en la linea de board=
 ; platform = atmelavr
-; board = megaatmega1280
+; board = ATmega1280
 ; framework = arduino
 ; monitor_speed = 115200
 ; lib_deps =   
